--- a/viewer.html
+++ b/viewer.html
@@ -1,32 +1,25 @@
+<!-- viewer.html -->
 <!doctype html>
-<html lang="fr">
+<html lang="fr" data-theme="a">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Viewer — Code / YAML</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <style>
-      /* layout fixe : la page ne s'agrandit pas avec le contenu */
+      /* small overrides for viewer layout */
       html, body { height: 100%; margin: 0; }
       .container { height: 100vh; display: flex; flex-direction: column; padding: 18px; box-sizing: border-box; max-width: 1200px; margin: 0 auto; }
       .header-container { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px; }
-      #download-button { padding: 6px 12px; background: var(--accent); color: #071026; border-radius: 6px; text-decoration: none; font-weight: 600; font-size: 13px; display: none; }
       .viewer { display: flex; gap: 12px; flex: 1; min-height: 0; align-items: stretch; width: 100%; }
       .panel { flex: 1; display: flex; flex-direction: column; border-radius: 10px; border: 1px solid var(--border); background: linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.02)); padding: 12px; min-width: 0; min-height: 0; width: 50%; }
       .panel .title { display: flex; justify-content: space-between; align-items: center; gap: 8px; margin-bottom: 8px; }
-      /* ↓↓↓ Reduit la hauteur des boîtes de code (demande de l'utilisateur) ↓↓↓ */
-      .code-box { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Roboto Mono", monospace; font-size: 14px; background: #021123; color: #dbeafe; padding: 10px; border-radius: 8px; overflow: auto; white-space: pre; /* pas de wrap */ flex: none; /* ne prend pas tout l'espace */ height: 260px; max-height: 40vh; min-height: 630px; width: 100%; box-sizing: border-box; }
-      /* ↑↑↑ boîtes plus petites — ajustables (height / max-height) ↑↑↑ */
       .controls { display: flex; gap: 8px; align-items: center; }
       .note { color: var(--muted); font-size: 13px; margin-top: 10px; text-align:left; }
       .error { color: #ffdede; background: #5a1414; padding: 8px; border-radius: 6px; margin-top: 8px; }
-      .code-box:focus { outline: 2px solid rgba(96, 165, 250, 0.14); }
-      /* Responsive : empile les panels sur petit écran */
-      @media (max-width: 820px) {
-        .viewer { flex-direction: column; }
-        .panel { width: 100%; }
-        .code-box { height: 220px; }
-      }
+      @media (max-width: 820px) { .viewer { flex-direction: column; } .panel { width: 100%; } }
     </style>
   </head>
   <body>
@@ -37,12 +30,10 @@
           <h1 style="margin:0;" id="viewer-title">Viewer — </h1>
         </div>
 
-
         <!-- bouton téléchargement : sera configuré par assets/viewer.js -->
-        <a id="download-button" class="button" href="#" download> Télécharger ZIP </a>
+        <a id="download-button" class="button" href="#" download style="display:none"> Télécharger ZIP </a>
       </div>
 
-      <!-- NOTE: on garde l'élément info mais on n'affiche plus la ligne "Affichage local..." -->
       <div id="info" class="note" style="margin-top:10px"></div>
 
       <div class="viewer" id="viewer" aria-live="polite">
@@ -74,9 +65,7 @@
       <div id="error" style="margin-top:12px"></div>
     </div>
 
-    <!-- Chargement de downloads.js en premier -->
     <script src="downloads.js"></script>
-    <!-- Chargement de viewer.js (logique : rempli les boxes, configure le bouton download, etc.) -->
     <script src="assets/viewer.js"></script>
   </body>
 </html>
